2007-12-15  Sebastien Pouliot  <sebastien@ximian.com>

	* TlsServerCertificate.cs: Add support for wilcard (*) when matching
	the target host with the certificate. Fix bug #346812

2007-05-22  Sebastien Pouliot  <sebastien@ximian.com>

	* TlsClientCertificate.cs: If possible avoid to export the private key
	(it could be non-exportable in a different RSA class implementation).
	Patch from Roy Versteeg to fix #81592.
	* TlsClientCertificateVerify.cs: Add chain support for x.509 client 
	certificates. Based on Roy Versteeg patch to fix #80557.

2006-12-23 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TlsServerCertificate.cs: typo.

2006-09-11  Sebastien Pouliot  <sebastien@ximian.com>

	* TlsClientFinished.cs: Use Write.Cipher instead of Cipher. Remove 
	usage of TlsStream in ProcessAsSsl3.
	* TlsClientKeyExchange.cs: Use Negotiating.Cipher instead of Cipher.
	Refactor to avoid code duplication between SSL3 and TLS.
	* TlsServerCertificate.cs: Use Negotiating.Cipher instead of Cipher.
	* TlsServerFinished.cs: Use Current.Cipher instead of Cipher. Use 
	Compare to test client and server digests equality. Remove usage of 
	TlsStream in ProcessAsSsl3.
	* TlsServerHello.cs: Use Negotiating.Cipher instead of Cipher. Remove
	usage of TlsStream to reduce memory allocations. Remove method 
	CompareSessionId and use the new base class Compare method instead.

2006-03-16  Sebastien Pouliot  <sebastien@ximian.com>

	* TlsClientHello.cs: Check to see if we already have a known session
	(past or concurrent) with the same target host. If so the use this
	session id to try to resume (i.e. abbreviated handshake).
	* TlsServerFinished.cs: Don't reset the hasndshake stream here. The 
	stream must be resetted once BOTH the client and the server are done.
	The order of message can be different if we use an abbreviated 
	handshake sequence which leads to an invalid handshake.
	* TlsServerHello.cs: Add this session info to the client cache. If the